<resources>
    <string name="app_name">App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="streamer_text">Spotify Streamer</string>
    <string name="scores_text">Scores App</string>
    <string name="library_text">Library App</string>
    <string name="bigger_text">Build it Bigger</string>
    <string name="xyz_text">XYZ Reader</string>
    <string name="capstone_text">Capstone: My Own App</string>
</resources>
