<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_text"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/streamer_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/title_text_view"
            android:layout_marginTop="16dp"
            android:text="@string/streamer_text"/>

        <Button
            android:id="@+id/scores_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/streamer_button"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/scores_text"/>

        <Button
            android:id="@+id/library_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/scores_button"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/library_text"/>

        <Button
            android:id="@+id/bigger_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/library_button"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/bigger_text"/>

        <Button
            android:id="@+id/xyz_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/bigger_button"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/xyz_text"/>

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xyz_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:background="@color/capstone_color"
            android:onClick="onButtonClick"
            android:text="@string/capstone_text"/>


    </RelativeLayout>

</ScrollView>